--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,11 @@ body {
 }
 
 .cabecalho {
-    margin-bottom: 50px;
+    margin-bottom: -8px;
 }
 
 .cabecalho__img__logo {
-    width: 120px;
-    height: 48px;
+    width: 5%;
     margin: 20px;
 }
 
@@ -40,8 +39,8 @@ body {
 /* CAIXA DE TEXTO */
 textarea {
     width: 100%;
-    max-width: 680px;
-    height: 500px;
+    max-width: 450px;
+    height: 400px;
     border-radius: 20px;
     border: none;
     background-color: rgba(0, 0, 0, 0.347);
@@ -55,10 +54,13 @@ textarea {
 /* IMG ANJO */
 .img__anjo {
     width: 100%;
-    max-width: 668px;
+    max-width: 500px;
     height: auto;
 }
 
+.info_principal{
+    display: flex;
+}
 /* BOTOES */
 .bnt__container {
     display: flex;
@@ -72,11 +74,11 @@ textarea {
 .first__bnt, .second__bnt {
     width: 100%;
     max-width: 328px;
-    height: 67px;
+    height: 50px;
     border: none;
     border-radius: 15px;
     padding: 10px;
-    font-size: 18px;
+    font-size: 15px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -114,9 +116,9 @@ textarea {
     white-space: pre-wrap;
     word-wrap: break-word;
     border: none;
-    width: 100%;
-    max-width: 680px;
-    height: 500px;
+    width: 25rem;
+    max-width: 450px;
+    height: 400px;
     font-size: 32px;
     color: rgba(220, 224, 228, 0.788);
     margin-bottom: 20px;
@@ -128,11 +130,15 @@ footer {
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0);
-    padding: 25px;
+    padding: 11px;
     width: 100%;
     position: relative; /* Remove o fixed para evitar problemas de layout */
 }
 
+/* img nome do criado */
+.nome_criador_img{
+    height: 10px;
+}
 /* Aviso */
 .container__aviso {
     display: flex;
